# auto_start_flutter

./: .gitignore  .metadata  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: main.yml
android/: build.gradle  build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .metadata  README.md  pubspec.yaml
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle  build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
ios/: Package.swift  auto_start_flutter.podspec
ios/Classes/: AutoStartFlutterPlugin.swift
ios/auto_start_flutter/: Package.swift
lib/: auto_start_flutter.dart  auto_start_flutter_method_channel.dart  auto_start_flutter_platform_interface.dart
linux/: CMakeLists.txt  auto_start_flutter_plugin.cc  auto_start_flutter_plugin_private.h
linux/test/: auto_start_flutter_plugin_test.cc
macos/: auto_start_flutter.podspec
macos/Classes/: AutoStartFlutterPlugin.swift
macos/auto_start_flutter/: Package.swift
test/: auto_start_flutter_method_channel_test.dart  auto_start_flutter_test.dart
windows/: CMakeLists.txt  auto_start_flutter_plugin.cpp  auto_start_flutter_plugin.h  auto_start_flutter_plugin_c_api.cpp
windows/include/auto_start_flutter/: auto_start_flutter_plugin.h  auto_start_flutter_plugin_c_api.h
windows/test/: auto_start_flutter_plugin_test.cpp
(+29 files in other folders)
